[workspace]
members = [
    "orbutils",
    "calculator",
    "launcher",
]
resolver = "2"

[patch.crates-io]
softbuffer = { git = "https://gitlab.redox-os.org/redox-os/softbuffer", branch = "redox-0.2" }
winit = { git = "https://gitlab.redox-os.org/redox-os/winit", branch = "redox-0.28.6" }
slint-build = { git = "https://github.com/slint-ui/slint", rev = "a01726537688fac2522156ced5f4cb836e96ac03" }
