[workspace]
members = [
    "orbutils",
    "launcher",
]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "ico", "webp"] }
orbclient = { version = "0.4.4", features = [ "image" ] }
orbfont = "0.4"
libredox = { version = "0.1.18", default-features = false, features = ["std", "call", "mkns"] }
redox_event = "0.4.8"
redox_syscall = "0.9.0"
