[package]
name = "calculator"
version = "0.2.0"
license-file = "../LICENSE-MIT"
authors = ["Redox OS Developers <info@redox-os.org>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "calculator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc.git" }
slint = { git = "https://github.com/slint-ui/slint", tag="v0.3.3", default-features = false, features = ["compat-0-3-0", "std", "renderer-winit-software"] }

[patch.crates-io]
winit = { git = "https://gitlab.redox-os.org/redox-os/winit", branch = "redox-0.27" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", tag="v0.3.3" }
coop_widgets = { git = "https://codeberg.org/flovansl/co_sl" }

