[package]
name = "calculator"
version = "0.2.0"
license-file = "../LICENSE-MIT"
authors = ["Redox OS Developers <info@redox-os.org>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc.git" }
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-0", "renderer-winit-software"] }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
coop_widgets = { git = "https://codeberg.org/flovansl/co_sl" }

[features]
default = []
slint-default = ["slint/default"]
