[package]
name = "editor"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://gitlab.redox-os.org/redox-os/orbutils"

[[bin]]
name = "editor"
path = "editor.rs"

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "0.2" }
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git" }