[package]
name = "file_manager"
version = "0.2.0"
license-file = "../LICENSE-MIT"
authors = ["Redox OS Developers <info@redox-os.org>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "file_manager"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.2", default-features = false, features = ["compat-0-3-0"] }
slint_orbclient = "0.1"

[build-dependencies]
slint-build = "0.3.2"
coop_widgets = { git = "https://codeberg.org/flovansl/co_sl" }