[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
freedesktop_entry_parser = "1"
freedesktop-icons = "0.2"
lazy_static = "1"
libc = "0.2"
libredox = { workspace = true }
log = "0.4.14"
orbclient = { workspace = true }
orbfont = { workspace = true }
redox-log = "0.1"
redox_event = { workspace = true }
resvg = "0.44"
shlex = "1"
xdg = "2"
