[package]
name = "orblogin"
version = "0.2.0"
license-file = "../LICENSE-MIT"
authors = ["Redox OS Developers <info@redox-os.org>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "orblogin"
path = "src/main.rs"

# for available backends and renderers see https://slint-ui.com/releases/0.3.5/docs/rust/slint/index.html#backends

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = ["compat-1-0", "renderer-winit-software"] }
redox_users = "0.4.0"
orbclient = "0.3.42"
redox-log = "0.1"
log = "0.4.14"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[features]
default = []
slint-default = ["slint/default"]
