[package]
name = "orbutils"
description = "The Orbital Utilities"
repository = "https://gitlab.redox-os.org/redox-os/orbutils"
version = "0.1.16"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "background"
path = "src/background/main.rs"

[[bin]]
name = "launcher"
path = "src/launcher/main.rs"

[[bin]]
name = "orblogin"
path = "src/orblogin/main.rs"

[[bin]]
name = "character_map"
path = "src/character_map/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "file_manager"
path = "src/file_manager/main.rs"

[[bin]]
name = "viewer"
path = "src/viewer/main.rs"

[[bin]]
name = "calendar"
path = "src/calendar/main.rs"

[dependencies]
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc.git" }
chrono = "0.4.6"
mime_guess = "1.8.6"
mime = "0.2.6"
orbclient = "0.3.47"
orbfont = "0.1.8"
orbimage = "0.1.17"
orbtk = "0.2.29"
redox_users = "0.4"
redox-log = "0.1"
log = "0.4.14"
dirs = "5.0.0"
libc = "0.2.50"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.50"

[target.'cfg(target_os = "redox")'.dependencies]
redox_event = "0.4.1"
libredox = { version = "0.1.3", default-features = false, features = ["std", "call"] }
